<package>
  <name>ddori_msgs</name>
  <version>0.0.1</version>
  <description>
    <p>
      ddori message and service types: custom messages and services for ddori packages.
    </p> 
  </description>
  <author email="dolmangi@naver.com">dolmangi</author>
  <maintainer email="dolmangi@naver.com">dolmangi</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
